fix: Overflow text wrap - Exun Talks

--- a/src/components/talks.module.css
+++ b/src/components/talks.module.css
@@ -28,6 +28,7 @@
 }
 .talksh1 {
   font-size: 3rem;
+  overflow-wrap: anywhere;
 }
 .talksh2 {
   font-size: 1.3em;
